--- a/Index.html
+++ b/Index.html
@@ -111,7 +111,7 @@
                         <!--Heading End-->
                         <tr>
                             <td width="40%">
-                                <img src="" alt="Ishika Tyagi" width="90%" </td>
+                                <img src="img.jpeg" alt="Ishika Tyagi" width="90%" </td>
                                 <td width="60%">
                                     <font="arial" color="#F7FAF1" size="20">
                                         <h1>
